--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -2,17 +2,16 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
 
-  <title>Survey</title>
-  <meta name="description" content="Survey">
+    <title>Survey</title>
+    <meta name="description" content="Survey">
 
-  <link rel="stylesheet" href="css/styles.css">
-
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <form>
+    <form action="/api/friends" method="post">
         q1
         <br>
         <select name='q1'>
@@ -113,7 +112,7 @@
             <option value='5'>5</option>
         </select>
         <br>
-        <input type="submit">
+        <input type="submit" value="Submit">
     </form>
 </body>
 </html>
