added best friend comparison from form data

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -12,9 +12,13 @@
 
 <body>
     <form action="/api/friends" method="post">
+        <input name='name' type='text'>
+        <br>
+        <input name='photo' type='text'>
+        <br>
         q1
         <br>
-        <select name='q1'>
+        <select name='scores'>
             <option value='1'>1</option>
             <option value='2'>2</option>
             <option value='3'>3</option>
@@ -24,7 +28,7 @@
         <br>
         q2
         <br>
-        <select name='q2'>
+        <select name='scores'>
             <option value='1'>1</option>
             <option value='2'>2</option>
             <option value='3'>3</option>
@@ -34,7 +38,7 @@
         <br>
         q3
         <br>
-        <select name='q3'>
+        <select name='scores'>
             <option value='1'>1</option>
             <option value='2'>2</option>
             <option value='3'>3</option>
@@ -44,7 +48,7 @@
         <br>
         q4
         <br>
-        <select name='q4'>
+        <select name='scores'>
             <option value='1'>1</option>
             <option value='2'>2</option>
             <option value='3'>3</option>
@@ -54,7 +58,7 @@
         <br>
         q5
         <br>
-        <select name='q5'>
+        <select name='scores'>
             <option value='1'>1</option>
             <option value='2'>2</option>
             <option value='3'>3</option>
@@ -64,7 +68,7 @@
         <br>
         q6
         <br>
-        <select name='q6'>
+        <select name='scores'>
             <option value='1'>1</option>
             <option value='2'>2</option>
             <option value='3'>3</option>
@@ -74,7 +78,7 @@
         <br>
         q7
         <br>
-        <select name='q7'>
+        <select name='scores'>
             <option value='1'>1</option>
             <option value='2'>2</option>
             <option value='3'>3</option>
@@ -84,7 +88,7 @@
         <br>
         q8
         <br>
-        <select name='q8'>
+        <select name='scores'>
             <option value='1'>1</option>
             <option value='2'>2</option>
             <option value='3'>3</option>
@@ -94,7 +98,7 @@
         <br>
         q9
         <br>
-        <select name='q9'>
+        <select name='scores'>
             <option value='1'>1</option>
             <option value='2'>2</option>
             <option value='3'>3</option>
@@ -104,7 +108,7 @@
         <br>
         q10
         <br>
-        <select name='q10'>
+        <select name='scores'>
             <option value='1'>1</option>
             <option value='2'>2</option>
             <option value='3'>3</option>
